--- a/index.html
+++ b/index.html
@@ -4,11 +4,133 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Lesson</title>
+        <!-- Embed icon -->
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        />
+        <!-- Embed font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap"
+            rel="stylesheet"
+        />
         <!-- Embed Css -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>Lesson</h1>
+        <main style="height: 5000px">
+            <!--Header -->
+            <header class="header fixed">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- Logo -->
+                        <img
+                            src="./assets/img/logo.svg"
+                            alt="Lesson"
+                            class="logo"
+                        />
+                        <!-- Nav -->
+                        <div class="nav">
+                            <ul>
+                                <li class="active"><a href="#!">Home</a></li>
+                                <li><a href="#!">Courses</a></li>
+                                <li><a href="#!">Pricing</a></li>
+                                <li><a href="#!">Review</a></li>
+                            </ul>
+                        </div>
+                        <!-- Action -->
+                        <div class="action">
+                            <a href="#!" class="btn sign-up">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <!-- Hero -->
+            <div class="hero">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- Hero Left -->
+                        <div class="media-block">
+                            <img
+                                src="./assets/img/guy-lesson.jpg"
+                                alt=""
+                                class="img"
+                            />
+
+                            <div class="hero-sumary">
+                                <!-- item -->
+                                <div class="item">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/img/Orion_page.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">UI/UX Design</p>
+                                    </div>
+                                </div>
+                                <!-- item -->
+                                <div class="item">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/img/Orion_code-window.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">Development</p>
+                                    </div>
+                                </div>
+                                <!-- item -->
+                                <div class="item">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/img/Orion_megaphone.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">30 Courses</p>
+                                        <p class="title">Marketing</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Hero Right -->
+                        <div class="content-block">
+                            <h1 class="heading">
+                                Learn without limits and spread knowledge.
+                            </h1>
+                            <p class="desc">
+                                Build new skills for that “this is my year”
+                                feeling with courses, certificates, and degrees
+                                from world-class universities and companies.
+                            </p>
+                            <div class="cta-group">
+                                <a href="#!" class="btn">See Courses</a>
+                                <button class="watch-video">
+                                    <div class="icon">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                    <span>Watch Video</span>
+                                </button>
+                            </div>
+                            <p class="desc">Recent engagement</p>
+                            <p class="desc">
+                                <strong>50K</strong> Students
+                                <strong>70+</strong> Courses
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
